Valorizzata ".arrow" con spostamento dell'entity in css

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <!--LIST AREA-->
         <div class="container2 style1">
             <section>
-                <span class="arrow">&#9660;</span>
-                <span class="list-title">New Task</span>
+                <span class="arrow list-title">New Task</span>
                 <br>
                 <span class="check">&check;</span>
                 <span class="list-item">Quarterly Newsletter</span>
@@ -32,8 +31,7 @@
             </section>
             
             <section class="style2">
-                <span class="arrow">&#9660;</span>
-                <span class="list-title">Today</span>
+                <span class=" arrow list-title">Today</span>
                 <br>
                 <span class="check">&check;</span>
                 <span class="list-item">Recruiting blog post</span>
@@ -53,8 +51,7 @@
             </section>
 
             <section class="style2">
-                <span class="arrow">&#9660;</span>
-                <span class="list-title">Upcoming</span>
+                <span class="arrow list-title">Upcoming</span>
                 <br>
                 <span class="cross">&times;</span>
                 <span class="list-item">Schedule meeting with Alex</span>
