Added: .arrow padding - Edited "span" to "h3"

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--LIST AREA-->
         <div class="container2 style1">
             <section>
-                <span class="arrow list-title">New Task</span>
+                <h3 class="arrow list-title">New Task</h3>
                 <br>
                 <span class="check">&check;</span>
                 <span class="list-item">Quarterly Newsletter</span>
@@ -31,7 +31,7 @@
             </section>
             
             <section class="style2">
-                <span class=" arrow list-title">Today</span>
+                <h3 class=" arrow list-title">Today</h3>
                 <br>
                 <span class="check">&check;</span>
                 <span class="list-item">Recruiting blog post</span>
@@ -51,7 +51,7 @@
             </section>
 
             <section class="style2">
-                <span class="arrow list-title">Upcoming</span>
+                <h3 class="arrow list-title">Upcoming</h3>
                 <br>
                 <span class="cross">&times;</span>
                 <span class="list-item">Schedule meeting with Alex</span>
